--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8">
   <title>Sign in &laquo; Admin</title>
   <link rel="stylesheet" href="../assets/vendors/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="../assets/css/admin.css">
 </head>
+
 <body>
   <div class="login">
     <div class="login-wrap">
@@ -16,14 +18,48 @@
       </div> -->
       <div class="form-group">
         <label for="email" class="sr-only">邮箱</label>
-        <input id="email" type="email" class="form-control" placeholder="邮箱" autofocus>
+        <input id="email" type="email" class="form-control" placeholder="邮箱" autofocus value="itheima@itcast.cn">
       </div>
       <div class="form-group">
         <label for="password" class="sr-only">密码</label>
-        <input id="password" type="password" class="form-control" placeholder="密码">
+        <input id="password" type="password" class="form-control" placeholder="密码" value="123456">
       </div>
-      <button class="btn btn-primary btn-block">登 录</button>
+      <button class="btn btn-primary btn-block" id="loginBtn">登 录</button>
     </div>
   </div>
+  <script src="../assets//vendors/jquery/jquery.min.js"></script>
+  <script>
+    $('#loginBtn').on('click', function () {
+      var email = $('#email').val();
+      var password = $('#password').val();
+      if (!email.trim().length) {
+        alert('请输入邮箱!');
+        return false;
+      };
+      if (!password.trim().length) {
+        alert('请输入密码');
+        return false;
+      };
+      $.ajax({
+        type: "post",
+        url: "/login",
+        data: {
+          email: email,
+          password: password,
+        },
+        success: function (response) {
+          //登录成功则跳转到用户页面
+          location.href = 'index.html';
+          //与 location.assign('index.html'); 等价
+        },
+        error: function () {
+          alert('登录失败，用户名或密码错误');
+          $('#email').val('');
+          $('#password').val('')
+        }
+      });
+    });
+  </script>
 </body>
+
 </html>
