--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>Sign in &laquo; Admin</title>
-  <link rel="stylesheet" href="../assets/vendors/bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="../assets/css/admin.css">
+  <link rel="stylesheet" href="/assets/vendors/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="/assets/css/admin.css">
 </head>
 
 <body>
   <div class="login">
     <div class="login-wrap">
-      <img class="avatar" src="../assets/img/default.png">
+      <img class="avatar" src="/assets/img/default.png">
       <!-- 有错误信息时展示 -->
-      <!-- <div class="alert alert-danger">
+      <div class="alert alert-danger" style="display: none;">
         <strong>错误！</strong> 用户名或密码错误！
-      </div> -->
+      </div>
       <div class="form-group">
         <label for="email" class="sr-only">邮箱</label>
         <input id="email" type="email" class="form-control" placeholder="邮箱" autofocus value="itheima@itcast.cn">
@@ -27,7 +27,7 @@
       <button class="btn btn-primary btn-block" id="loginBtn">登 录</button>
     </div>
   </div>
-  <script src="../assets//vendors/jquery/jquery.min.js"></script>
+  <script src="/assets/vendors/jquery/jquery.min.js"></script>
   <script>
     $('#loginBtn').on('click', function () {
       var email = $('#email').val();
@@ -53,9 +53,11 @@
           //与 location.assign('index.html'); 等价
         },
         error: function () {
-          alert('登录失败，用户名或密码错误');
-          $('#email').val('');
-          $('#password').val('')
+          $('.alert').css('display','block');
+          //alert('登录失败，用户名或密码错误');
+          $('.form-control').on('focus',function(){
+            $('.alert').css('display','none');
+          });
         }
       });
     });
