--- a/public/admin/users.html
+++ b/public/admin/users.html
@@ -164,7 +164,7 @@
         <td>{{ $value.role == 'normal' ? '普通用户':'超级管理员'}}</td>
         <td class="text-center">
           <a href="javascript:;" class="btn btn-default btn-xs edit" data-id="{{@$value._id}}" >编辑</a>
-          <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+          <a href="javascript:;" class="btn btn-danger btn-xs delete" data-id="{{@$value._id}}">删除</a>
         </td>
       </tr>
       {{/each}}
