--- a/public/admin/categories.html
+++ b/public/admin/categories.html
@@ -1,12 +1,13 @@
 <!-- 进行登录拦截 -->
 <script src="/login/status"></script>
 <script>
-  if(!isLogin){
+  if (!isLogin) {
     location.href = 'login.html';
   }
 </script>
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8">
   <title>Categories &laquo; Admin</title>
@@ -16,6 +17,7 @@
   <link rel="stylesheet" href="/assets/css/admin.css">
   <script src="/assets/vendors/nprogress/nprogress.js"></script>
 </head>
+
 <body>
   <script>NProgress.start()</script>
 
@@ -36,7 +38,7 @@
         <strong>错误！</strong>发生XXX错误
       </div> -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" id="modifyBox">
           <form id="addCategory">
             <h2>添加分类</h2>
             <div class="form-group">
@@ -65,7 +67,7 @@
               </tr>
             </thead>
             <tbody id="categoryBox">
-              
+
             </tbody>
           </table>
         </div>
@@ -119,13 +121,30 @@
       <td class="text-center"><input type="checkbox" data-id={{$value._id}}></td>
       <td>{{$value.title}}</td>
       <td class="text-center">
-        <a href="javascript:;" class="btn btn-info btn-xs" data-id={{$value._id}}>编辑</a>
+        <a href="javascript:;" class="btn btn-info btn-xs edit" data-id={{$value._id}}>编辑</a>
         <a href="javascript:;" class="btn btn-danger btn-xs" data-id={{$value._id}}>删除</a>
       </td>
     </tr>
   {{/each}}
   </script>
+  <script type="text/html" id="categoryModifyTpl">
+    <form id="ModifyCategory" data-id={{_id}}>
+      <h2>修改分类</h2>
+      <div class="form-group">
+        <label>名称</label>
+        <input class="form-control" type="text" placeholder="请输入分类名称" name="title" value="{{title}}">
+      </div>
+      <div class="form-group">
+        <label>图标</label>
+        <input class="form-control" type="text" placeholder="请输入分类图标类名" name="className" value="{{className}}">
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">修改</button>
+      </div>
+    </form>
+  </script>
   <script src="/js/category.js"></script>
   <script>NProgress.done()</script>
 </body>
+
 </html>
