--- a/public/admin/categories.html
+++ b/public/admin/categories.html
@@ -55,13 +55,13 @@
           </form>
         </div>
         <div class="col-md-8">
-          <!-- <div class="page-action">
+          <div class="page-action" style="display: none;" id="deleteMany">
             <a class="btn btn-danger btn-sm" href="javascript:;">批量删除</a>
-          </div> -->
+          </div>
           <table class="table table-striped table-bordered table-hover">
             <thead>
               <tr>
-                <th class="text-center" width="40"><input type="checkbox"></th>
+                <th class="text-center" width="40"><input type="checkbox" id="selectAll"></th>
                 <th>名称</th>
                 <th class="text-center" width="100">操作</th>
               </tr>
@@ -118,11 +118,11 @@
   <script type="text/html" id="categoryListTpl">
     {{each data}}
     <tr>
-      <td class="text-center"><input type="checkbox" data-id={{$value._id}}></td>
+      <td class="text-center"><input type="checkbox" data-id={{$value._id}} class="categoryStatus"></td>
       <td>{{$value.title}}</td>
       <td class="text-center">
         <a href="javascript:;" class="btn btn-info btn-xs edit" data-id={{$value._id}}>编辑</a>
-        <a href="javascript:;" class="btn btn-danger btn-xs" data-id={{$value._id}}>删除</a>
+        <a href="javascript:;" class="btn btn-danger btn-xs delete" data-id={{$value._id}}>删除</a>
       </td>
     </tr>
   {{/each}}
