--- a/public/admin/post-add.html
+++ b/public/admin/post-add.html
@@ -56,8 +56,7 @@
           <div class="form-group">
             <label for="category">所属分类</label>
             <select id="category" class="form-control" name="category">
-              <option value="1">未分类</option>
-              <option value="2">潮生活</option>
+
             </select>
           </div>
           <div class="form-group">
@@ -119,6 +118,13 @@
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script src="/js/common.js"></script>
+  <script src="../assets/vendors/art-template/template-web.js"></script>
+  <script type="text/html" id="categoryTpl">
+    {{each data}}
+    <option value="{{$index}}">{{$value.title}}</option>
+    {{/each}}
+  </script>
+  <script src="../js/post-add.js"></script>
   <script>NProgress.done()</script>
 </body>
 </html>
