--- a/public/admin/post-add.html
+++ b/public/admin/post-add.html
@@ -35,7 +35,7 @@
       <!-- <div class="alert alert-danger">
         <strong>错误！</strong>发生XXX错误
       </div> -->
-      <form class="row">
+      <form class="row" id="postAdd">
         <div class="col-md-9">
           <div class="form-group">
             <label for="title">标题</label>
@@ -62,13 +62,13 @@
           </div>
           <div class="form-group">
             <label for="created">发布时间</label>
-            <input id="created" class="form-control" name="created" type="datetime-local">
+            <input id="created" class="form-control" name="createAt" type="datetime-local">
           </div>
           <div class="form-group">
             <label for="status">状态</label>
-            <select id="status" class="form-control" name="status">
-              <option value="drafted">草稿</option>
-              <option value="published">已发布</option>
+            <select id="status" class="form-control" name="state">
+              <option value="0">草稿</option>
+              <option value="1">已发布</option>
             </select>
           </div>
           <div class="form-group">
@@ -122,10 +122,10 @@
   <script src="../assets/vendors/art-template/template-web.js"></script>
   <script type="text/html" id="categoryTpl">
     {{each data}}
-    <option value="{{$index}}">{{$value.title}}</option>
+    <option value="{{$value._id}}">{{$value.title}}</option>
     {{/each}}
   </script>
-  <script src="../js/post-add.js"></script>
+  <script src="/js/post-add.js"></script>
   <script>NProgress.done()</script>
 </body>
 </html>
