--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -1,12 +1,13 @@
 <!-- 进行登录拦截 -->
 <script src="/login/status"></script>
 <script>
-  if(!isLogin){
+  if (!isLogin) {
     location.href = 'login.html';
   }
 </script>
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8">
   <title>Posts &laquo; Admin</title>
@@ -16,6 +17,7 @@
   <link rel="stylesheet" href="../assets/css/admin.css">
   <script src="../assets/vendors/nprogress/nprogress.js"></script>
 </head>
+
 <body>
   <script>NProgress.start()</script>
 
@@ -35,23 +37,18 @@
       <div class="page-action">
         <!-- show when multiple checked -->
         <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
-        <form class="form-inline">
-          <select name="" class="form-control input-sm">
-            <option value="">所有分类</option>
+        <form class="form-inline" id="filterForm">
+          <select name="category" class="form-control input-sm" id="categoryBox">
+
           </select>
-          <select name="" class="form-control input-sm">
-            <option value="">所有状态</option>
-            <option value="">草稿</option>
-            <option value="">已发布</option>
+          <select class="form-control input-sm" name="state">
+            <option value="0">草稿</option>
+            <option value="1">已发布</option>
           </select>
-          <button class="btn btn-default btn-sm">筛选</button>
+          <input type="submit" class="btn btn-default btn-sm" value="筛选">
         </form>
-        <ul class="pagination pagination-sm pull-right">
-          <li><a href="#">上一页</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">下一页</a></li>
+        <ul class="pagination pagination-sm pull-right" id="page">
+
         </ul>
       </div>
       <table class="table table-striped table-bordered table-hover">
@@ -66,7 +63,7 @@
           </tr>
         </thead>
         <tbody id="postBox">
-        
+
         </tbody>
       </table>
     </div>
@@ -128,7 +125,20 @@
     </tr>
     {{/each}}
   </script>
-  <script src="../js/posts.js"></script>
+  <script type="text/html" id="categoryTpl">
+    {{each data}}
+    <option value={{$value._id}}>{{$value.title}}</option>
+    {{/each}}
+  </script>
+  <script type="text/html" id="pageTpl">
+    <li style="display:{{page == 1 ? 'none':'inline'}}"><a href="javascript:;" onclick="changePage({{page-1}})">上一页</a></li>
+    {{each display}}
+    <li><a href="javascript:;" onclick="changePage({{$value}})">{{$value}}</a></li>
+    {{/each}}
+    <li style="display:{{page == pages ? 'none':'inline'}}"><a href="javascript:;" onclick="changePage({{page+1}})">下一页</a></li>
+  </script>
+  <script src="/js/posts.js"></script>
   <script>NProgress.done()</script>
 </body>
+
 </html>
