--- a/public/admin/post-add.html
+++ b/public/admin/post-add.html
@@ -1,12 +1,13 @@
 <!-- 进行登录拦截 -->
 <script src="/login/status"></script>
 <script>
-  if(!isLogin){
+  if (!isLogin) {
     location.href = 'login.html';
   }
 </script>
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8">
   <title>Add new post &laquo; Admin</title>
@@ -16,6 +17,7 @@
   <link rel="stylesheet" href="../assets/css/admin.css">
   <script src="../assets/vendors/nprogress/nprogress.js"></script>
 </head>
+
 <body>
   <script>NProgress.start()</script>
 
@@ -35,47 +37,50 @@
       <!-- <div class="alert alert-danger">
         <strong>错误！</strong>发生XXX错误
       </div> -->
-      <form class="row" id="postAdd">
-        <div class="col-md-9">
-          <div class="form-group">
-            <label for="title">标题</label>
-            <input id="title" class="form-control input-lg" name="title" type="text" placeholder="文章标题">
+      <div id="fatherBox">
+        <form class="row" id="postAdd">
+          <div class="col-md-9">
+            <div class="form-group">
+              <label for="title">标题</label>
+              <input id="title" class="form-control input-lg" name="title" type="text" placeholder="文章标题">
+            </div>
+            <div class="form-group">
+              <label for="content">标题</label>
+              <textarea id="content" class="form-control input-lg" name="content" cols="30" rows="10"
+                placeholder="内容"></textarea>
+            </div>
           </div>
-          <div class="form-group">
-            <label for="content">标题</label>
-            <textarea id="content" class="form-control input-lg" name="content" cols="30" rows="10" placeholder="内容"></textarea>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="form-group">
-            <label for="feature">特色图像</label>
-            <!-- show when image chose -->
-            <img class="help-block thumbnail" style="display: none" id="preview">
-            <input id="feature" class="form-control" name="feature" type="file">
-            <input type="hidden" name="thumbnail" id="thumbnail">
-          </div>
-          <div class="form-group">
-            <label for="category">所属分类</label>
-            <select id="category" class="form-control" name="category">
+          <div class="col-md-3">
+            <div class="form-group">
+              <label for="feature">特色图像</label>
+              <!-- show when image chose -->
+              <img class="help-block thumbnail" style="display: none" id="preview">
+              <input id="feature" class="form-control" name="feature" type="file">
+              <input type="hidden" name="thumbnail" id="thumbnail">
+            </div>
+            <div class="form-group">
+              <label for="category">所属分类</label>
+              <select id="category" class="form-control" name="category">
 
-            </select>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="created">发布时间</label>
+              <input id="created" class="form-control" name="createAt" type="datetime-local">
+            </div>
+            <div class="form-group">
+              <label for="status">状态</label>
+              <select id="status" class="form-control" name="state">
+                <option value="0">草稿</option>
+                <option value="1">已发布</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <button class="btn btn-primary" type="submit">保存</button>
+            </div>
           </div>
-          <div class="form-group">
-            <label for="created">发布时间</label>
-            <input id="created" class="form-control" name="createAt" type="datetime-local">
-          </div>
-          <div class="form-group">
-            <label for="status">状态</label>
-            <select id="status" class="form-control" name="state">
-              <option value="0">草稿</option>
-              <option value="1">已发布</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <button class="btn btn-primary" type="submit">保存</button>
-          </div>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
   </div>
 
@@ -125,7 +130,53 @@
     <option value="{{$value._id}}">{{$value.title}}</option>
     {{/each}}
   </script>
+  <script type="text/html" id="modifyTpl">
+    <form class="row" id="postModify" data-id={{_id}}>
+      <div class="col-md-9">
+        <div class="form-group">
+          <label for="title">标题</label>
+          <input id="title" class="form-control input-lg" name="title" type="text" placeholder="文章标题" value='{{title}}'>
+        </div>
+        <div class="form-group">
+          <label for="content">标题</label>
+          <textarea id="content" class="form-control input-lg" name="content" cols="30" rows="10" placeholder="内容">{{content}}</textarea>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="form-group">
+          <label for="feature">特色图像</label>
+          <!-- show when image chose -->
+          <img class="help-block thumbnail" style="display: none" id="preview">
+          <input id="feature" class="form-control" name="feature" type="file">
+          <input type="hidden" name="thumbnail" id="thumbnail" value="{{thumbnail}}">
+        </div>
+        <div class="form-group">
+          <label for="category">所属分类</label>
+          <select id="category" class="form-control" name="category">
+            {{each categories}}
+            <option value={{$value._id}} {{$value._id == category._id ? 'selected':''}}>{{$value.title}}</option>
+            {{/each}}
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="created">发布时间</label>
+          <input id="created" class="form-control" name="createAt" type="datetime-local" value="{{createAt && createAt.substr(0,19)}}">
+        </div>
+        <div class="form-group">
+          <label for="status">状态</label>
+          <select id="status" class="form-control" name="state">
+            <option value="0" {{state == 0 ? 'selected':''}}>草稿</option>
+            <option value="1" {{state == 1 ? 'selected':''}}>已发布</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <button class="btn btn-primary" type="submit">保存修改</button>
+        </div>
+      </div>
+    </form>
+  </script>
   <script src="/js/post-add.js"></script>
   <script>NProgress.done()</script>
 </body>
+
 </html>
