--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -119,8 +119,8 @@
       <td class="text-center">{{$imports.formateDate($value.createAt)}}</td>
       <td class="text-center">{{$value.state == 1 ? '已发布':'未发布'}}</td>
       <td class="text-center">
-        <a href="javascript:;" class="btn btn-default btn-xs" data-id={{$value._id}}>编辑</a>
-        <a href="javascript:;" class="btn btn-danger btn-xs" data-id={{$value._id}}>删除</a>
+        <a href="/admin/post-add.html?id={{$value._id}}" class="btn btn-default btn-xs">编辑</a>
+        <a href="javascript:;" class="btn btn-danger btn-xs delete" data-id={{$value._id}}>删除</a>
       </td>
     </tr>
     {{/each}}
