--- a/public/admin/comments.html
+++ b/public/admin/comments.html
@@ -32,12 +32,8 @@
         <h1>所有评论</h1>
       </div>
       <div class="page-action">
-        <ul class="pagination pagination-sm pull-right">
-          <li><a href="#">上一页</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">下一页</a></li>
+        <ul class="pagination pagination-sm pull-right" id="pageBox">
+          
         </ul>
       </div>
       <table class="table table-striped table-bordered table-hover">
@@ -51,40 +47,8 @@
             <th class="text-center" width="100">操作</th>
           </tr>
         </thead>
-        <tbody>
-          <tr class="danger">
-            <td>大大</td>
-            <td>楼主好人，顶一个</td>
-            <td>《Hello world》</td>
-            <td>2026/10/07</td>
-            <td>未批准</td>
-            <td class="text-center">
-              <a href="post-add.html" class="btn btn-info btn-xs">批准</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
-          <tr>
-            <td>大大</td>
-            <td>楼主好人，顶一个</td>
-            <td>《Hello world》</td>
-            <td>2026/10/07</td>
-            <td>已批准</td>
-            <td class="text-center">
-              <a href="post-add.html" class="btn btn-warning btn-xs">驳回</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
-          <tr>
-            <td>大大</td>
-            <td>楼主好人，顶一个</td>
-            <td>《Hello world》</td>
-            <td>2026/10/07</td>
-            <td>已批准</td>
-            <td class="text-center">
-              <a href="post-add.html" class="btn btn-warning btn-xs">驳回</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
+        <tbody id="commentsList">
+          
         </tbody>
       </table>
     </div>
@@ -129,6 +93,30 @@
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+  <script src="../assets/vendors/art-template/template-web.js"></script>
+  <script type="text/html" id="commentTpl">
+    {{each records}}
+    <tr class="{{$value.state == 0 ? 'danger': ''}}">
+        <td>{{$value.author.nickName}}</td>
+        <td>{{$value.content}}</td>
+        <td>{{$value.post.title}}</td>
+        <td>{{$imports.formateDate($value.createAt)}}</td>
+        <td>{{$value.state == 0 ? '未批准':'已批准'}}</td>
+        <td class="text-center">
+          <a href="post-add.html" class="btn btn-info btn-xs">批准</a>
+          <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+        </td>
+      </tr>
+      {{/each}}
+  </script>
+  <script type='text/html' id="pageTpl">
+    <li style="display:{{page == 1 ? 'none':'inline'}}"><a href="javascript:;" onclikc="changePage({{$value - 1}})">上一页</a></li>
+    {{each display}}
+    <li><a href="javascript:;" onclikc="changePage({{$value}})">{{$value}}</a></li>
+    {{/each}}
+    <li style="display:{{page == pages ? 'none':'inline'}}"><a href="javascript:;" onclikc="changePage({{$value + 1}})">下一页</a></li>
+  </script>
+  <script src="../js/comment.js"></script>
   <script src="/js/common.js"></script>
   <script>NProgress.done()</script>
 </body>
