--- a/public/admin/comments.html
+++ b/public/admin/comments.html
@@ -103,20 +103,22 @@
         <td>{{$imports.formateDate($value.createAt)}}</td>
         <td>{{$value.state == 0 ? '未批准':'已批准'}}</td>
         <td class="text-center">
-          <a href="post-add.html" class="btn btn-info btn-xs">批准</a>
-          <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+          <a href="javascript:;" class="btn btn-info btn-xs status" data-id={{$value._id}} data-status={{$value.state}}>
+            {{$value.state == 0 ? '批准':'驳回'}}
+          </a>
+          <a href="javascript:;" class="btn btn-danger btn-xs delete" data-id={{$value._id}}>删除</a>
         </td>
       </tr>
       {{/each}}
   </script>
   <script type='text/html' id="pageTpl">
-    <li style="display:{{page == 1 ? 'none':'inline'}}"><a href="javascript:;" onclikc="changePage({{$value - 1}})">上一页</a></li>
+    <li style="display:{{page == 1 ? 'none':'inline'}}"><a href="javascript:;" onclick="changePage({{page - 1}})">上一页</a></li>
     {{each display}}
-    <li><a href="javascript:;" onclikc="changePage({{$value}})">{{$value}}</a></li>
+    <li><a href="javascript:;" onclick="changePage({{$value}})">{{$value}}</a></li>
     {{/each}}
-    <li style="display:{{page == pages ? 'none':'inline'}}"><a href="javascript:;" onclikc="changePage({{$value + 1}})">下一页</a></li>
+    <li style="display:{{page == pages ? 'none':'inline'}}"><a href="javascript:;" onclick="changePage({{page + 1}})">下一页</a></li>
   </script>
-  <script src="../js/comment.js"></script>
+  <script src="/js/comment.js"></script>
   <script src="/js/common.js"></script>
   <script>NProgress.done()</script>
 </body>
