--- a/public/admin/slides.html
+++ b/public/admin/slides.html
@@ -43,7 +43,8 @@
               <label for="image">图片</label>
               <!-- show when image chose -->
               <img class="help-block thumbnail" style="display: none">
-              <input id="image" class="form-control" name="image" type="file">
+              <input class="form-control" type="file" id="file">
+              <input type="hidden" name="image" id="image">
             </div>
             <div class="form-group">
               <label for="text">文本</label>
@@ -131,6 +132,7 @@
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+  <script src="/js/slides.js"></script>
   <script src="/js/common.js"></script>
   <script>NProgress.done()</script>
 </body>
