--- a/public/admin/slides.html
+++ b/public/admin/slides.html
@@ -37,7 +37,7 @@
       </div> -->
       <div class="row">
         <div class="col-md-4">
-          <form>
+          <form id="slidesForm">
             <h2>添加新轮播内容</h2>
             <div class="form-group">
               <label for="image">图片</label>
@@ -48,7 +48,7 @@
             </div>
             <div class="form-group">
               <label for="text">文本</label>
-              <input id="text" class="form-control" name="text" type="text" placeholder="文本">
+              <input id="text" class="form-control" name="title" type="text" placeholder="文本">
             </div>
             <div class="form-group">
               <label for="link">链接</label>
