--- a/public/admin/slides.html
+++ b/public/admin/slides.html
@@ -1,12 +1,13 @@
 <!-- 进行登录拦截 -->
 <script src="/login/status"></script>
 <script>
-  if(!isLogin){
+  if (!isLogin) {
     location.href = 'login.html';
   }
 </script>
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8">
   <title>Slides &laquo; Admin</title>
@@ -16,6 +17,7 @@
   <link rel="stylesheet" href="../assets/css/admin.css">
   <script src="../assets/vendors/nprogress/nprogress.js"></script>
 </head>
+
 <body>
   <script>NProgress.start()</script>
 
@@ -69,23 +71,8 @@
                 <th class="text-center" width="100">操作</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td class="text-center"><img class="slide" src="../uploads/slide_1.jpg"></td>
-                <td>XIU功能演示</td>
-                <td>#</td>
-                <td class="text-center">
-                  <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="text-center"><img class="slide" src="../uploads/slide_2.jpg"></td>
-                <td>XIU功能演示</td>
-                <td>#</td>
-                <td class="text-center">
-                  <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-                </td>
-              </tr>
+            <tbody id="slidesBox">
+
             </tbody>
           </table>
         </div>
@@ -132,8 +119,22 @@
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+  <script src="../assets/vendors/art-template/template-web.js"></script>
+  <script type="text/html" id="slideTpl">
+    {{each data}}
+    <tr>
+        <td class="text-center"><img class="slide" src="{{$value.image}}"></td>
+        <td>{{$value.title}}</td>
+        <td>{{$value.link}}</td>
+        <td class="text-center">
+          <a href="javascript:;" class="btn btn-danger btn-xs delete" data-id={{$value._id}}>删除</a>
+        </td>
+      </tr>
+      {{/each}}
+  </script>
   <script src="/js/slides.js"></script>
   <script src="/js/common.js"></script>
   <script>NProgress.done()</script>
 </body>
+
 </html>
