--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <title>阿里百秀-发现生活，发现美!</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/vendors/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="./assets/vendors/nprogress/nprogress.css">
+  <script src="./assets/vendors/nprogress/nprogress.js"></script>
 </head>
 <body>
   <div class="wrapper">
@@ -178,31 +180,8 @@
     </div>
     <div class="content">
       <div class="swipe">
-        <ul class="swipe-wrapper">
-          <li>
-            <a href="#">
-              <img src="uploads/slide_1.jpg">
-              <span>XIU主题演示</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="uploads/slide_2.jpg">
-              <span>XIU主题演示</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="uploads/slide_1.jpg">
-              <span>XIU主题演示</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="uploads/slide_2.jpg">
-              <span>XIU主题演示</span>
-            </a>
-          </li>
+        <ul class="swipe-wrapper" id="slideBox">
+          
         </ul>
         <p class="cursor"><span class="active"></span><span></span><span></span><span></span></p>
         <a href="javascript:;" class="arrow prev"><i class="fa fa-chevron-left"></i></a>
@@ -319,27 +298,17 @@
   </div>
   <script src="assets/vendors/jquery/jquery.js"></script>
   <script src="assets/vendors/swipe/swipe.js"></script>
-  <script>
-    //
-    var swiper = Swipe(document.querySelector('.swipe'), {
-      auto: 3000,
-      transitionEnd: function (index) {
-        // index++;
-
-        $('.cursor span').eq(index).addClass('active').siblings('.active').removeClass('active');
-      }
-    });
-
-    // 上/下一张
-    $('.swipe .arrow').on('click', function () {
-      var _this = $(this);
-
-      if(_this.is('.prev')) {
-        swiper.prev();
-      } else if(_this.is('.next')) {
-        swiper.next();
-      }
-    })
+  <script src="/assets/vendors/art-template/template-web.js"></script>
+  <script type="text/html" id="slideTpl">
+    {{each data}}
+      <li>
+        <a href="/detail.html?id={{$value.link}}">
+          <img src="{{$value.image}}">
+          <span>{{$value.title}}</span>
+        </a>
+      </li>
+    {{/each}}
   </script>
+  <script src="/js/home.js"></script>
 </body>
 </html>
