点赞功能完成

--- a/public/detail.html
+++ b/public/detail.html
@@ -160,6 +160,7 @@
         <span>分类: <a href="javascript:;">{{category.title}}</a></span>
         <span>阅读: ({{meta.views}})</span>
         <span>评论: ({{meta.comments}})</span>
+        <a href='javascript:;' id="click">赞</a>
       </div>
   </script>
   <script src="/js/public.js"></script>
