--- a/public/detail.html
+++ b/public/detail.html
@@ -131,6 +131,9 @@
       <div class="article" id="postBox">
 
       </div>
+      <div id="commentBox">
+
+      </div>
       <div class="panel hots">
         <h3>热门推荐</h3>
         <ul id="recommendBox">
@@ -142,6 +145,7 @@
       <p>© 2016 XIU主题演示 本站主题由 themebetter 提供</p>
     </div>
   </div>
+
   <script src="/assets/vendors/jquery/jquery.min.js"></script>
   <script src="/assets/vendors/art-template/template-web.js"></script>
   <script type="text/html" id="postTpl">
@@ -162,6 +166,31 @@
         <span>评论: ({{meta.comments}})</span>
         <a href='javascript:;' id="click">赞</a>
       </div>
+  </script>
+  <script type="text/html" id="commentTpl">
+    <style type="text/css">
+      .comment{
+        margin-bottom:20px;
+      }
+      .comment textarea{
+        box-sizing:border-box;
+        padding:10px;
+        width:100%;
+        height:80px;
+        display:block;
+      }
+      .comment input{
+        width:100px;
+        height:30px;
+        margin-top:10px;
+      }
+    </style>
+    <div class="comment">
+      <form id="comment">
+        <textarea></textarea>
+        <input type="submit" value="提交评论">
+      </form>
+    </div>
   </script>
   <script src="/js/public.js"></script>
   <script src="/js/recommend.js"></script>
