--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -87,8 +87,12 @@
         },
         success: function (response) {
           localStorage.setItem('user', JSON.stringify(response))
-          // 登录成功 跳转到数据管理的首页面
-          location.href = 'index.html';
+          if (response.role == 'admin') {
+            // 登录成功 跳转到数据管理的首页面
+            location.href = 'index.html';
+          }else{
+            location.href = '/index.html';
+          }
         },
         error: function () {
           // 登录失败
